<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gaia Dergi</string>
    <string name="action_favorite">Add to favorites</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="favorites_added">Added to your favorites</string>
    <string name="unfavorited">Removed from your favorites</string>
    <string name="exit">Please click back again to exit</string>
    <string name="send_email">Send an e-mail&#8230;</string>
    <string name="no_app">There is no e-mail application on your device.</string>
    <string name="no_internet">There is a problem with your internet connection…</string>
    <string name="nomatch">Your search did not match any result&#8230;</string>
    <string name="error">Something went wrong :( Try again later&#8230;</string>

    <!-- Nav Drawer Menu Items -->
    <string name="nav_text_home">Home</string>
    <string name="nav_text_green">Green</string>
    <string name="nav_text_life">Life</string>
    <string name="nav_text_ecology">Ecology</string>
    <string name="nav_text_culture">Culture &amp; Art</string>
    <string name="nav_text_science">Science &amp; Technology</string>
    <string name="nav_text_turkey">Newsworthy</string>
    <string name="nav_text_events">Announcements &amp; Events</string>
    <string name="nav_text_society">Human &amp; Society</string>
    <string name="nav_section_special">Special for You</string>
    <string name="nav_text_favorites">Favorites</string>
    <string name="nav_text_sharings">Sharings</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_section_extras">Extras</string>
    <string name="nav_text_store">Store</string>
    <string name="nav_text_about">About</string>
    <string name="nav_text_rate">Rate it!</string>
    <string name="nav_text_support">Share the app!</string>

    <!-- NavMenu Statues -->
    <string name="navigation_drawer_open">Navigation menu opened</string>
    <string name="navigation_drawer_close">Navigation menu closed</string>

    <string name="notification">Notifications:</string>
    <string name="account">E-magazine subscription:</string>
    <string name="version">Version:</string>
    <string name="account_standart">None</string>
    <string name="account_premium">Available</string>
    <string name="settings_saved">Settings are saved&#8230;</string>
    <string name="copyright">Copyright © 2017 Gaia Dergi</string>

    <!-- Rate It -->
    <string name="rate_title">Rate the app</string>
    <string name="rate_message">If you enjoy using our app, you can rate it! Thanks</string>
    <string name="rate_yes">Rate</string>
    <string name="rate_no">No, thanks</string>
    <string name="rate_later">Later</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://gaiadergi.com\",\n  }\n}]</string>

</resources>